traversal.snake.Snake.scala.error
Compilation error:
Snake:6: error: value East is not a member of object plm.universe.Direction
    } else if (getDirection() == Direction.East){ // regarde ? l'Est regarde si mur ? gauche
                                           ^